syntax = "proto3";

package gl_types;

message float_array {
    repeated float values = 1 [packed = true];
}

message uint32_array {
    repeated uint32 values = 1 [packed = true];
}